--- a/resumeindex.html
+++ b/resumeindex.html
@@ -103,10 +103,10 @@
     body.dark #about p { color: #e2e8f0; }
     body.dark #experience-heading, body.dark #education-heading, body.dark #skills-heading { color: #3b82f6; }
     body.dark .timeline-item .job-title, body.dark .timeline-item .school-title { color: #d1e5ff; }
-    body.dark .timeline-item h3 { color: #cbd5e1; }
+    body.dark .timeline-item h3 { color: #065ac7; }
     body.dark .timeline-item p { color: #e2e8f0; }
     body.dark #projects-heading { color: #3b82f6; }
-    body.dark #projects .project-year { color: #3b82f6; }
+    body.dark #projects .project-year { color: #065ac7; }
     body.dark #projects .project-text { color: #e2e8f0; }
     body.dark #projects .project-card { background-color: #011024; box-shadow: 0 4px 6px rgb(0 0 0 / 0.3); }
     body.dark .timeline-item::before { border-color: #1e293b; }
