--- a/resumeindex.html
+++ b/resumeindex.html
@@ -22,7 +22,7 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
-    /* Skip link */
+
     .skip-link {
       position: absolute;
       top: -40px;
@@ -40,7 +40,6 @@
       outline-offset: 2px;
     }
 
-    /* Header */
     header {
       background-color: rgba(15, 23, 42, 0.8);
       backdrop-filter: blur(10px);
@@ -94,7 +93,6 @@
     #projects .project-card { background-color: #1e293b; border-radius: 0.5rem; padding: 1.5rem; box-shadow: 0 4px 6px rgb(0 0 0 / 0.1); transition: box-shadow 0.3s ease; }
     #projects .project-card:hover { box-shadow: 6px 12px rgb(0 0 0 / 0.3); }
 
-    /* Dark mode */
     body.dark { background-color: #1e293b; color: #cbd5e1; }
     body.dark header { background-color: rgba(15, 23, 42, 0.8); }
     body.dark .nav-link { color: #cbd5e1; }
@@ -127,8 +125,7 @@
       </div>
       <button id="mode-toggle" aria-label="Toggle light and dark mode" title="Toggle light and dark mode">
         <svg id="mode-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="12" cy="12" r="5" />
-          <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42 M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+          <!-- icon path dynamically set by JS -->
         </svg>
       </button>
     </nav>
@@ -225,6 +222,7 @@
       skillsChart.options.scales.y.ticks.color = yTickColor;
       skillsChart.update();
     }
+
     window.onload = function() {
       const barColors = ['#334E68','#1E3A8A','#0F3057','#1E40AF','#172554','#254E70'];
       skillsChart = new Chart(ctx,{
@@ -243,21 +241,33 @@
           plugins:{legend:{display:false},tooltip:{enabled:true,backgroundColor:'#334E68',titleColor:'#e2e8f0',bodyColor:'#e2e8f0',callbacks:{label:context=>`Proficiency: ${context.raw}%`}}}
         }
       });
+
       const savedThemeOnLoad = localStorage.getItem('theme');
-      updateChartColors(savedThemeOnLoad==='dark');
+      if(savedThemeOnLoad==='dark'){
+        document.body.classList.add('dark');
+        updateChartColors(true);
+        setModeIcon(true); // Dark mode shows sun
+      } else {
+        setModeIcon(false); // Light mode shows moon
+      }
     };
 
-    // Dark Mode
-    const modeToggle=document.getElementById('mode-toggle');
-    const body=document.body;
-    const modeIcon=document.getElementById('mode-icon');
-    const sunPath="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42 M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42";
-    const moonPath="M21 12.79A9 9 0 0112.21 3 7 7 0 0021 12.79z";
+    // Dark Mode Toggle
+    const modeToggle = document.getElementById('mode-toggle');
+    const body = document.body;
+    const modeIcon = document.getElementById('mode-icon');
 
-    modeToggle.addEventListener('click',()=>{
-      body.classList.toggle('dark');
-      localStorage.setItem('theme',body.classList.contains('dark')?'dark':'light');
-      updateChartColors(body.classList.contains('dark'));
+    function setModeIcon(isDark) {
+      modeIcon.innerHTML = isDark
+        ? '<path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42 M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />' // sun
+        : '<path d="M21 12.79A9 9 0 0112.21 3 7 7 0 0021 12.79z" />'; // moon
+    }
+
+    modeToggle.addEventListener('click', () => {
+      const isDark = body.classList.toggle('dark');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      updateChartColors(isDark);
+      setModeIcon(isDark);
     });
   </script>
 </body>
