--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                 <nav class="hidden md:flex" role="navigation" aria-label="Main Navigation">
                     <ul class="flex space-x-6">
                         <li><a href="#about" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">About</a></li>
+                        <li><a href="#skills" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Skills</a></li>
                         <li><a href="resumeindex.html" target="_blank" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Resume</a></li>
                         <li><a href="gallery.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
                         <li><a href="#contact" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Contact</a></li>
@@ -326,6 +327,7 @@
         <nav id="mobile-menu" class="hidden md:hidden bg-[var(--bg-primary)]/90 pt-4 pb-2 mt-4 rounded-b-xl border-t border-[var(--border-default)]" role="navigation" aria-label="Mobile Navigation">
             <ul class="flex flex-col items-center space-y-4">
                 <li><a href="#about" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">About</a></li>
+                <li><a href="#skills" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Skills</a></li>
                 <li><a href="resumeindex.html" target="_blank" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Resume</a></li>
                 <li><a href="gallery.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Projects</a></li>
                 <li><a href="#contact" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Contact</a></li>
@@ -383,8 +385,64 @@
             </div>
         </section>
 
+        <!-- NEW Skills Section with updated categories -->
+        <section id="skills" class="py-20 bg-[var(--bg-secondary)] static-section rounded-t-xl">
+            <div class="container mx-auto px-6 md:px-12">
+                <h2 class="text-4xl font-bold text-[var(--glitch-yellow-main)] mb-12 text-center glitch-text" data-text="My Skills">
+                    My Skills
+                </h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10 text-left">
+
+                    <!-- Category 1: UX & UI Design -->
+                    <div class="bg-[var(--bg-primary)] p-8 rounded-xl shadow-xl border-2 border-[var(--border-default)]">
+                        <h3 class="text-2xl font-semibold text-[var(--glitch-blue-shadow)] mb-4">UX & UI Design</h3>
+                        <ul class="list-disc list-inside space-y-1 text-lg text-[var(--text-primary)] ml-4">
+                            <li>Human-Centered UX & UI Design</li>
+                            <li>Wireframing & Prototyping</li>
+                            <li>Information Architecture & Interaction Design</li>
+                            <li>Visual Design & Responsive/Multi-Platform Design</li>
+                            <li>Accessibility & Inclusive Design (WCAG compliance)</li>
+                        </ul>
+                    </div>
+
+                    <!-- Category 2: Research & Strategy -->
+                    <div class="bg-[var(--bg-primary)] p-8 rounded-xl shadow-xl border-2 border-[var(--border-default)]">
+                        <h3 class="text-2xl font-semibold text-[var(--glitch-red-shadow)] mb-4">Research & Strategy</h3>
+                        <ul class="list-disc list-inside space-y-1 text-lg text-[var(--text-primary)] ml-4">
+                            <li>User Research, Usability Testing, and Journey Mapping</li>
+                            <li>Design Thinking & Problem Definition</li>
+                            <li>Strategic Thinking & Information Synthesis</li>
+                            <li>Client Needs Prioritization & Goal-Oriented Execution</li>
+                        </ul>
+                    </div>
+
+                    <!-- Category 3: Tools & Technologies -->
+                    <div class="bg-[var(--bg-primary)] p-8 rounded-xl shadow-xl border-2 border-[var(--border-default)]">
+                        <h3 class="text-2xl font-semibold text-[var(--glitch-yellow-main)] mb-4">Tools & Technologies</h3>
+                        <ul class="list-disc list-inside space-y-1 text-lg text-[var(--text-primary)] ml-4">
+                            <li>Figma, Moqups, Adobe XD, Adobe Creative Suite</li>
+                            <li>Miro, Wix</li>
+                            <li>Salesforce, Supabase, Tally, Microsoft Office Suite</li>
+                            <li>Agile & Cross-Functional Collaboration</li>
+                        </ul>
+                    </div>
+
+                    <!-- Category 4: Soft Skills -->
+                    <div class="bg-[var(--bg-primary)] p-8 rounded-xl shadow-xl border-2 border-[var(--border-default)]">
+                        <h3 class="text-2xl font-semibold text-[var(--glitch-blue-shadow)] mb-4">Soft Skills</h3>
+                        <ul class="list-disc list-inside space-y-1 text-lg text-[var(--text-primary)] ml-4">
+                            <li>Empathy & User-Centered Problem Solving</li>
+                            <li>Strong Communication & Presentation Skills</li>
+                            <li>Critical Thinking & Adaptability</li>
+                            <li>Self-Driven Work Ethic</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Projects Section (Limited View) -->
-        <section id="projects" class="py-20 bg-[var(--bg-secondary)] static-section rounded-t-xl">
+        <section id="projects" class="py-20 bg-[var(--bg-primary)] static-section rounded-t-xl">
             <div class="container mx-auto px-6 md:px-12">
                 <h2 class="text-4xl font-bold text-[var(--glitch-yellow-main)] mb-12 text-center glitch-text" data-text="My Projects">
                     My Projects
@@ -430,7 +488,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="py-20 bg-[var(--bg-primary)] static-section rounded-t-xl">
+        <section id="contact" class="py-20 bg-[var(--bg-secondary)] static-section rounded-t-xl">
             <div class="container mx-auto px-6 md:px-12 text-center">
                 <h2 class="text-4xl font-bold text-[var(--glitch-yellow-main)] mb-12 glitch-text" data-text="Get In Touch">
                     Get In Touch
@@ -452,7 +510,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[var(--bg-secondary)] text-[var(--text-primary)] py-8 text-center rounded-t-xl">
+    <footer class="bg-[var(--bg-primary)] text-[var(--text-primary)] py-8 text-center rounded-t-xl">
         <div class="container mx-auto px-6 md:px-12">
             <p>&copy; 2025 Amanda Ramirez. All rights reserved.</p>
         </div>
