--- a/gallery.html
+++ b/gallery.html
@@ -297,7 +297,7 @@
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex" role="navigation" aria-label="Main Navigation">
                     <ul class="flex space-x-6">
-                        <li><a href="index.html#about" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">About</a></li>
+                        <li><a href="index.html#about" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Home</a></li>
                         <li><a href="resumeindex.html" target="_blank" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Resume</a></li>
                         <li><a href="gallery.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
                         <li><a href="index.html#contact" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Contact</a></li>
@@ -473,7 +473,7 @@
             <p class="text-[var(--text-primary)]">
                 <strong>Key Outcomes:</strong> This tool serves as a practical resource for teams to conduct self-audits and integrate accessibility into their design and development workflows from the start.
             </p>
-            <a href="WCAG_2.2_AA_Audit_Sheet.pdf" target="_blank" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
+            <a href="https://github.com/Aram814/Assets/blob/382a256f7f987104051c386a68004bc9b5a80a9a/WCAG_2.2_AA_Audit_Sheet.pdf" target="_blank" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
                 View Audit Sheet (PDF)
             </a>
         </div>
