--- a/resumeindex.html
+++ b/resumeindex.html
@@ -411,6 +411,15 @@
     <!-- Footer -->
     <footer class="bg-[var(--bg-secondary)] text-[var(--text-primary)] py-8 text-center rounded-t-xl">
         <div class="container mx-auto px-6 md:px-12">
+            <!-- Download Resume Button -->
+            <div class="my-4">
+                <a href="https://github.com/Aram814/Portfolio/blob/33a8e2b452db4a936b07c5ee5a3cfba96490db99/Amanda%20Ramirez%20Resume.pdf" download="Amanda_Ramirez_Resume.pdf" class="inline-block py-3 px-6 rounded-lg font-bold text-lg transition duration-300 ease-in-out
+                bg-[var(--glitch-yellow-main)] text-[var(--bg-primary)]
+                hover:bg-[var(--glitch-red-shadow)] hover:text-white
+                focus:outline-none focus:ring-4 focus:ring-[var(--glitch-blue-shadow)]">
+                    Download Full Resume
+                </a>
+            </div>
             <p>&copy; 2025 Amanda Ramirez. All rights reserved.</p>
         </div>
     </footer>
