--- a/resumeindex.html
+++ b/resumeindex.html
@@ -199,7 +199,7 @@
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex" role="navigation" aria-label="Main Navigation">
                     <ul class="flex space-x-6">
-                        <li><a href="index.html#home" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Home</a></li>
+                        <li><a href="https://aram814.github.io/Portfolio/index.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Home</a></li>
                         <li><a href="resumeindex.html#experience" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Experience</a></li>
                         <li><a href="resumeindex.html#education" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Education</a></li>
                         <li><a href="resumeindex.html#skills" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Skills</a></li>
