--- a/resumeindex.html
+++ b/resumeindex.html
@@ -280,7 +280,7 @@
                     <h3 id="education" class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4">Education</h3>
                     <div class="mb-6">
                         <h4 class="text-xl font-semibold text-[var(--text-contrast)]">Google UX Design</h4>
-                        <p class="text-[var(--text-primary)]">Professional Certificate | Coursea | 2025</p>
+                        <p class="text-[var(--text-primary)]">Professional Certificate | <a href="https://www.coursera.org/learner/amanda-ramirez">Coursera</a> | 2025</p>
                         <ul class="list-disc list-inside space-y-2">
                             <li>Completed a comprehensive curriculum covering the UX design process from end to end, including ideation, wireframing, prototyping, user research, and usability testing. This certification signifies a deep understanding of human-centered design principles.</li>
                         </ul>
