--- a/index.html
+++ b/index.html
@@ -366,20 +366,15 @@
                         <img src="https://lh3.googleusercontent.com/a/ACg8ocLYUprETb4a-em0nsjuw9oDcXEHjRud63IMYTChVOgnd4U0GTks=s576-c-no" alt="Amanda Ramirez profile picture" class="relative w-4/5 h-4/5 object-cover rounded-full border-4 border-[var(--glitch-blue-shadow)] shadow-lg z-10">
                     </div>
                     <p class="mb-4">
-                        Hi, I’m Amanda (she/her) — a UX designer who brings creativity, curiosity, and care to everything I build.
+                        Hi, I’m Amanda (she/her) — a UX designer who brings creativity, curiosity, and care to every project. I design digital experiences that tackle complex problems, turning them into user-centered solutions — especially for people often overlooked by traditional systems.
                     </p>
                     <p class="mb-4">
-                        I design digital experiences that to tackle complex problems into user-centric solutions for real people — especially those often left out of traditional systems. I enjoy focusing on inclusive, intuitive solutions grounded in research and empathy that can genuinely improve lives.
+                        I approach projects through research, ideation, and iteration, keeping users at the center of every decision. I collaborate closely with stakeholders, test designs with real users when possible, and refine solutions based on feedback. My work blends boldness with thoughtfulness — a little retro, always human — from microinteractions to the way a user feels when they hit “submit.”
                     </p>
-                    <p class="mb-4">
-                        I specialize in user research, wireframing, prototyping, and usability testing. My style is bold but thoughtful - little retro - always human. I love working on projects where the details matter — from microinteractions to the way a user feels when they hit “submit."
+                     <p class="mb-4">
+                        When I’m not designing, you’ll find me traveling, outdoors, vibing to emo-punk or classical strings, or sinking into a good book. I’m excited to create experiences that truly make a difference for people.
                     </p>
-                    <p>
-                        When I'm not designing, I enjoy traveling, being in the outdoors, vibing to either emo-punk or classical strings, or simply sinking into a good book.
-                    </p>
-                    <p>
-                        Let’s connect and build something that makes a difference to people!
-                    </p>
+                   
                     <div class="clear-both"></div> <!-- Clear float for subsequent content -->
                 </div>
             </div>
