--- a/gallery.html
+++ b/gallery.html
@@ -384,7 +384,7 @@
 
                     <!-- New Project Card 5 - Copy and customize this block for a new project -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project5')">
-                        <img src="https://placehold.co/600x300/3498DB/FFFFFF?text=Women's+Fellowship+Bulletin" alt="Placeholder image for a new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-blue-shadow)]">
+                        <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/project%20img.png" alt="Placeholder image for a new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-blue-shadow)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Women's Fellowship Bulletin</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">WCAG, Accesibility, User Research & Testing</p>
@@ -396,8 +396,8 @@
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project6')">
                         <img src="https://placehold.co/600x300/E74C3C/FFFFFF?text=Project+6" alt="Placeholder image for another new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                         <div class="p-6">
-                            <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Another Awesome Project</h3>
-                            <p class="text-[var(--text-primary)] text-sm mb-4">More, Great, UX, Work</p>
+                            <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Pending</h3>
+                            <p class="text-[var(--text-primary)] text-sm mb-4">UX Designer</p>
                             <p class="text-[var(--text-primary)]">This section should give a quick summary of what the project is about and what you learned or accomplished.</p>
                         </div>
                     </li>
@@ -505,7 +505,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project5')" aria-label="Close">&times;</span>
             <h3 id="project5ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Women's Fellowship Bulletin</h3>
-            <img src="https://placehold.co/600x300/3498DB/FFFFFF?text=Project+5" alt="Placeholder image for a new project" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-blue-shadow)]">
+            <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/project%20img.png" alt="Placeholder image for a new project" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-blue-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
                 The women's group of a community church needed a website that was accesible both desktop or mobile and could act as a "bulletin board" for their group. 
             </p>
