--- a/gallery.html
+++ b/gallery.html
@@ -514,7 +514,7 @@
                 <strong>Methodologies:</strong> User Research, WCAG Guidelines, Accesibility Auditing, User Testing & Feedback, Wireframing, & Prototyping.
             </p>
             <p class="text-[var(--text-primary)]">
-                <strong>Key Outcomes:</strong> [Summary of the project's impact and what you learned]
+                <strong>Key Outcomes:</strong> The importance of simplicity, familiarity, and accessibility in UX.
             </p>
             <a href="CaseStudy5.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
                 View Full Case Study
