--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -304,7 +304,7 @@
       <hr>
 
       <footer role="contentinfo">
-        <a class="button-link" href="https://aram814.github.io/Portfolio/index.html">&larr; Back to Portfolio</a>
+        <a class="button-link" href="https://aram814.github.io/Portfolio/gallery.html">&larr; Back to Gallery</a>
       </footer>
     </div>
   </main>
