--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -167,8 +167,8 @@
 
   <section>
     <h2>Back to Portfolio</h2>
-    <a class="button" href="https://aram814.github.io/Portfolio/index.html">
-      Return to Portfolio
+    <a class="button" href="https://aram814.github.io/Portfolio/gallery.html">
+      Return to Gallery
     </a>
   </section>
 </main>
