--- a/CaseStudy3.html
+++ b/CaseStudy3.html
@@ -105,7 +105,7 @@
 <body>
   <header role="banner">
     <div class="logo" aria-label="Amanda Ramirez logo">Amanda Ramirez</div>
-    <a href="index.html" class="button" role="link">← Back to Portfolio</a>
+    <a href="gallery.html" class="button" role="link">← Back to Gallery</a>
     <div class="toggle-container">
       <label for="theme-toggle">Light/Dark Mode</label>
       <input type="checkbox" id="theme-toggle" aria-label="Toggle light and dark mode">
