--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">QueerSafeSpace App</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Safety, Community, Anonymous Updates</p>
-                            <p class="text-[var(--text-primary)]">An app developed to aid in the safety of the LGBTQ+ community by allowing anonymous updates to locations to mark with safety ratings, tags, and additional details.</p>
+                            <p class="text-[var(--text-primary)]"> community-powered app that helps LGBTQ+ people find and share safe spaces. Currently in MVP development with FlutterFlow and Supabase, featuring a crowdsourced safety map, anonymous submissions, and crisis mode.</p>
                         </div>
                     </li>
 
@@ -470,7 +470,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Death Doula Webpage</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
-                            <p class="text-[var(--text-primary)]">Full construct and design of a personal/private business for local Death Doula services. Requirements were for both desktop and mobile compatibility, ability to book consulting, read testimonies, view services, and add a feature "blog."</p>
+                            <p class="text-[var(--text-primary)]">A spiritual, earthy website designed for a Florida-based death doula. Built with a Supabase backend support and a with a sage palette, the site balances comfort with professionalism, offering resources, booking, and future blog/gallery features.</p>
                         </div>
                     </li>
                 </ul>
@@ -518,7 +518,7 @@
             <h3 id="project1ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Arcade High Score Tracking App</h3>
             <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" alt="Screenshot of Scorecade app interface showing high score list" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
-                This project was instrumental in deepening my understanding of creating dynamic, user-friendly applications, and the challenges involved in ensuring a seamless and engaging user journey within a complex system.
+                A retro-inspired mobile app that modernizes arcade high-score tracking. I led user research, personas, journey mapping, and prototyping, ultimately creating a distinct pixelated interface and working React prototype.
             </p>
             <p class="text-[var(--text-primary)] mb-4">
                 <strong>My Role:</strong> UX Designer <br>
@@ -539,7 +539,7 @@
             <h3 id="project2ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">QueerSafeSpace App</h3>
             <img src="https://raw.githubusercontent.com/Aram814/QueerSafeSpace/refs/heads/main/6956decd-f27f-446d-9fd2-f06042b9fac5.png" alt="Screenshot of QueerSafeSpace app interface with map and location pins" class="w-full h-auto object-contain mb-6 rounded-lg border-2 border-[var(--glitch-blue-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
-                The QueerSafeSpace App was developed to aid in the safety of the LGBTQ+ community. It allows users to anonymously update locations, marking them with safety ratings, tags, and additional details to foster a safer environment.
+                A community-powered app that helps LGBTQ+ people find and share safe spaces. Currently in MVP development with FlutterFlow and Supabase, featuring a crowdsourced safety map, anonymous submissions, and crisis mode.
             </p>
             <p class="text-[var(--text-primary)] mb-4">
                 <strong>My Role:</strong> UX Designer, Concept Developer <br>
@@ -560,14 +560,14 @@
             <h3 id="project3ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Death Doula Webpage</h3>
             <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-yellow-main)]">
             <p class="text-[var(--text-primary)] mb-4">
-                This project involved the full construct and design of a personal/private business website for local Death Doula services. Requirements were for both desktop and mobile compatibility, ability to book consulting, read testimonies, view services, and add a feature "blog."
+                A spiritual, earthy website designed for a Florida-based death doula. Built with a Supabase backend support and a with a sage palette, the site balances comfort with professionalism, offering resources, booking, and future blog/gallery features.
             </p>
             <p class="text-[var(--text-primary)] mb-4">
                 <strong>My Role:</strong> Web Designer, UX Strategist <br>
                 <strong>Methodologies:</strong> Information Architecture, Content Strategy, Booking System Integration, Testimonial Display, Responsive Web Design, Blog Integration.
             </p>
             <p class="text-[var(--text-primary)]">
-                <strong>Key Outcomes:</strong> TBA
+                <strong>Key Outcomes:</strong> Requirements for both desktop and mobile compatibility was crucial. Further development is being worked for the ability to book consulting, enhanced my knowledge with Supabase by adding in Testimonial features and an added "blog."
             </p>
             <a href="CaseStudy3.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
                 View Full Case Study
