--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -140,7 +140,7 @@
 
 <header class="header pb-12" id="overview">
     <div class="media-box min-h-[350px] mb-8">
-        <img src="scorecade.png" class="image-full-width object-cover" alt="Pixelated Scorecade App Screenshots">
+        <img src="appname.png" class="image-full-width object-cover" alt="Pixelated Scorecade App Name Screenshot">
     </div>
     <div class="tldr">
         <h1 class="text-6xl font-extrabold mb-4">Pixelated Scorecade</h1>
@@ -199,9 +199,9 @@
             <p class="text-lg"><strong>Key Findings:</strong> Players valued nostalgia, hated cluttered interfaces, and wanted social features.</p>
             <p class="text-lg"><strong>Personas:</strong> “The Competitor” and “The Collector” emerged as primary user types.</p>
         </div>
-        <figure class="media">
+        <figure class="media mx-auto">
             <div class="media-box min-h-[250px]">
-                <img src="https://placehold.co/400x250/333333/66d9ef?text=User+Persona+Card" alt="User persona card" class="object-cover w-full h-full rounded-md" />
+                <img src="UserPersona.png" alt="User persona card" class="object-cover w-full h-full rounded-md" />
             </div>
         </figure>
     </div>
@@ -218,7 +218,7 @@
     </ul>
     <figure class="media mt-8">
         <div class="media-box min-h-[250px]">
-            <img src="https://placehold.co/1120x350/F1C40F/1A1A1A?text=Low-fi+Wireframes+%E2%86%92+Mid-fi+Iteration+%E2%86%92+Pixel-style+Moodboard" alt="Low-fi wireframes, mid-fi iteration, and pixel-style moodboard" class="image-full-width object-cover" />
+            <img src="MockUps2.png" alt="Low-fi wireframes, mid-fi iteration, and pixel-style moodboard" class="image-full-width object-cover" />
         </div>
     </figure>
 </section>
